--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       <ul id=filters>
           <li><a class="selected" href="#/all">All</a></li>
           <li><a class="act" href="#/active">Active</a></li>
-          <li><a class="comp" href="#/acompleted">Completed</a></li>          
+          <li><a class="comp" href="#/acompleted">Completed</a></li>
+          <li><a class="clrcomp" href="#/clrcompleted">Clear completed</a></li>
+
       </ul>
     </footer>
   </div>
