--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>ex-todoMVC</title>
@@ -10,22 +9,21 @@
   <script src="script.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 </head>
-
 <body>
   <div class="container">
     <h1>TODOS</h1>
     <div class="todo">
-      <input type="text" id="throw" placeholder="What needs to be done?" style="border:none"/>
+      <input type="text" id="throw" placeholder="What needs to be done?" style="border:none">
+      <i class="fa fa-chevron-down"></i>
     </div>
     <div class="list"></div>
     <footer>
       <span id="todo-count"><strong></strong> item left</span>
       <ul id=filters>
-          <li><a class="selected" href="#/all">All</a></li>
+          <li><a class="alltodos" href="#/all">All</a></li>
           <li><a class="act" href="#/active">Active</a></li>
           <li><a class="comp" href="#/acompleted">Completed</a></li>
           <li><a class="clrcomp" href="#/clrcompleted">Clear completed</a></li>
-
       </ul>
     </footer>
   </div>
